# facerecognition

./: CMakeLists.txt  LICENSE  README.md  app.rc  facerecognition.code-workspace  imageprocessor.h  main.cpp  pool.h  script.cpp  script.h  version.h
Facenet/: CMakeLists.txt  facenet.cpp  facenet.h  main.cpp  widget.cpp  widget.h
FacialRecognition/: FacialRecognition.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h
Ffmpeg/: CMakeLists.txt  lineedit.cpp  lineedit.h  main.cpp  player.cpp  player.h  player.ui  playthread.cpp  playthread.h
Ffmpeg/ffmpeg/: avframequeue.cpp  avframequeue.h  avpacketqueue.cpp  avpacketqueue.h  decodethread.cpp  decodethread.h  demuxthread.cpp  demuxthread.h  demuxthread_network.cpp  demuxthread_network.h  queue.h  thread.h
Sql/: aboutSql.txt  attendancerecord.h  customhnsw.h  dataitem.h  facedatabase.h
UI/: CMakeLists.txt  configure.h  enterface.cpp  enterface.h  enterface.ui  enterface.ui.autosave  facedbwidget.cpp  facedbwidget.h  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  qcustomplot.cpp  qcustomplot.h  ui_mainwindow.h
UI/Resources/: Resources.qrc
Yolov8/YOLO/: #mainwindow.cpp  #mainwindow.h  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  yolo.cpp  yolo.h
installer/: config.ini  deploy.bat  setup.iss  setup.iss.template
